--- a/XSlicer_API/requirements.txt
+++ b/XSlicer_API/requirements.txt
@@ -1,39 +1,323 @@
+absl-py==2.1.0
+addict==2.4.0
+aider-chat==0.80.1
+aider-install==0.1.3
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.12
+aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.11.0
-certifi==2025.10.5
-click==8.3.0
+anyio==3.7.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-generator==1.10
+async-lru==2.0.4
+attrs==25.3.0
+audioread==3.0.1
+babel==2.16.0
+backoff==2.2.1
+backports.tarfile==1.2.0
+basicsr==1.4.2
+beautifulsoup4==4.13.3
+bleach==6.1.0
+blinker==1.7.0
+blis==0.7.11
+boto3==1.35.14
+botocore==1.35.14
+bs4==0.0.1
+catalogue==2.0.10
+certifi==2025.1.31
+cffi==1.17.1
+chardet==3.0.4
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.16.0
 colorama==0.4.6
+comm==0.2.2
+confection==0.1.4
+ConfigArgParse==1.7
+contextlib2==21.6.0
+contourpy==1.3.0
+customtkinter==5.0.1
+cycler==0.12.1
+cymem==2.0.8
+Cython==3.0.11
+darkdetect==0.7.1
+debugpy==1.8.5
+decorator==5.1.1
+deep-translator==1.11.4
+defusedxml==0.7.1
+diff-match-patch==20241021
+diffusers==0.30.3
+diskcache==5.6.3
+distro==1.9.0
+dlib==19.24.2
 dnspython==2.8.0
+docutils==0.21.2
 email-validator==2.3.0
-fastapi==0.118.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+exceptiongroup==1.1.1
+executing==2.1.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+fastapi==0.115.12
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.0
+fastjsonschema==2.20.0
+ffmpeg==1.4
+filelock==3.18.0
+filetype==1.2.0
+fire==0.6.0
+flake8==7.2.0
+Flask==3.0.2
+flatbuffers==24.3.25
+fonttools==4.53.1
+fqdn==1.5.1
+frozenlist==1.5.0
+fsspec==2025.3.2
+future==1.0.0
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-pasta==0.2.0
+googletrans==4.0.0rc1
+grep-ast==0.8.1
+grpcio==1.66.1
 h11==0.16.0
+h2==3.2.0
+h5py==3.11.0
+hpack==3.0.0
+hstspreload==2025.1.1
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.30.1
+hyperframe==5.2.0
 idna==3.10
+imageio==2.35.1
+importlib_metadata==7.2.1
+importlib_resources==6.5.2
+ipykernel==6.29.5
+ipython==8.27.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+itsdangerous==2.1.2
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.0.2
+jedi==0.19.1
 Jinja2==3.1.6
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.5.2
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+keras==3.5.0
+keyring==25.3.0
+kiwisolver==1.4.7
+langcodes==3.3.0
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.11.0
+litellm==1.65.0
+llvmlite==0.45.1
+lmdb==1.5.1
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
-pydantic==2.11.10
-pydantic_core==2.33.2
-Pygments==2.19.2
-python-dotenv==1.1.1
+mistune==3.0.2
+mixpanel==4.10.1
+ml-dtypes==0.4.0
+monotonic==1.6
+more-itertools==10.5.0
+mpmath==1.3.0
+msgpack==1.1.1
+multidict==6.3.0
+murmurhash==1.0.10
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.2.1
+nh3==0.2.18
+notebook==7.2.2
+notebook_shim==0.2.4
+numba==0.62.1
+numpy==1.26.4
+openai==1.70.0
+opencv-python==4.7.0.72
+opencv-python-headless==4.10.0.84
+opt-einsum==3.3.0
+optree==0.12.1
+outcome==1.2.0
+overrides==7.7.0
+packaging==24.2
+pandas==2.0.2
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==11.1.0
+pkginfo==1.10.0
+platformdirs==4.3.2
+pooch==1.8.2
+posthog==3.23.0
+preshed==3.0.9
+prometheus_client==0.20.0
+prompt_toolkit==3.0.50
+propcache==0.3.1
+protobuf==3.20.3
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pybboxes==0.1.6
+pycodestyle==2.13.0
+pycparser==2.22
+pydantic==2.11.1
+pydantic_core==2.33.0
+pydub==0.25.1
+pyflakes==3.3.2
+pygame==2.4.0
+Pygments==2.19.1
+pypandoc==1.15
+pyparsing==3.1.4
+pyperclip==1.9.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==2.0.7
 python-multipart==0.0.20
-PyYAML==6.0.3
-rich==14.1.0
+pytube==15.0.0
+pytz==2023.3
+pywin32==306
+pywin32-ctypes==0.2.3
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.2.0
+readme_renderer==44.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rich==14.0.0
 rich-toolkit==0.15.1
 rignore==0.7.0
+roboflow==1.1.44
+rpds-py==0.24.0
+s3transfer==0.10.2
+safetensors==0.4.5
+sahi==0.11.18
+scikit-image==0.24.0
+scikit-learn==1.7.2
+scipy==1.13.1
+seaborn==0.13.2
+selenium==4.9.1
+Send2Trash==1.8.3
+sense-hat==2.4.0
 sentry-sdk==2.39.0
+shapely==2.0.6
 shellingham==1.5.4
+six==1.17.0
+smart-open==6.4.0
+smmap==5.0.2
 sniffio==1.3.1
-starlette==0.48.0
+socksio==1.0.0
+sortedcontainers==2.4.0
+sounddevice==0.5.1
+soundfile==0.13.1
+soupsieve==2.6
+soxr==1.0.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+stack-data==0.6.3
+starlette==0.46.1
+sympy==1.13.2
+tb-nightly==2.18.0a20240919
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow_object_detection_api==0.1.1
+termcolor==2.4.0
+terminado==0.18.1
+terminaltables==3.1.10
+thinc==8.2.3
+thop==0.1.1.post2209072238
+threadpoolctl==3.6.0
+tifffile==2024.8.30
+tiktoken==0.9.0
+tinycss2==1.3.0
+tokenizers==0.21.1
+tomli==2.0.1
+torch==2.4.1
+torchvision==0.19.1
+tornado==6.4.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.45.1
+tree-sitter==0.24.0
+tree-sitter-c-sharp==0.23.1
+tree-sitter-embedded-template==0.23.2
+tree-sitter-language-pack==0.6.1
+tree-sitter-yaml==0.7.0
+trio==0.22.0
+trio-websocket==0.10.2
+twine==5.1.1
 typer==0.19.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-urllib3==2.5.0
-uvicorn==0.37.0
-watchfiles==1.1.0
+types-python-dateutil==2.9.0.20240906
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2023.3
+ultralytics==8.2.90
+ultralytics-thop==2.0.6
+uri-template==1.3.0
+urllib3==2.3.0
+uv==0.6.11
+uvicorn==0.34.0
+wasabi==1.1.2
+watchfiles==1.0.4
+wcwidth==0.2.13
+weasel==0.3.4
+webcolors==24.8.0
+webdriver-manager==3.8.6
+webencodings==0.5.1
+websocket-client==1.8.0
 websockets==15.0.1
+Werkzeug==3.0.1
+widgetsnbextension==4.0.13
+wrapt==1.16.0
+wsproto==1.2.0
+yapf==0.40.2
+yarl==1.18.3
+yolov5==7.0.13
+yt-dlp==2025.1.26
+zipp==3.21.0
